Fix very slightly uneven column width

--- a/resources/ext.parsermigration.edit.css
+++ b/resources/ext.parsermigration.edit.css
@@ -7,11 +7,12 @@
 	width: 50%;
 	overflow: scroll;
 	border-right: thin solid #ccc;
+	padding-right: 0.2em;
 	vertical-align: top;
 }
 
 .mw-parsermigration-right {
-	padding-left: 0.4em;
+	padding-left: 0.2em;
 	vertical-align: top;
 }
 
